force-app/main/default/objects/SBQQ__PriceTier__c/SBQQ__PriceTier__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__PriceScheduleHelp</customHelpPage>
    <description>Price Tier that specifies discount for a given quantity range.</description>
    <label>Price Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>