force-app/main/default/objects/SBQQ__PriceTier__c/fields/SBQQ__OriginalBlockPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OriginalBlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The block price where this price tier is originated from.</description>
        <inlineHelpText>The block price where this price tier is originated from.</inlineHelpText>
        <label>Original Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Price Tiers</relationshipLabel>
        <relationshipName>PriceTiers</relationshipName>
        <type>Lookup</type>
    </CustomField>