force-app/main/default/objects/SBQQ__PriceTier__c/fields/SBQQ__OriginalDiscountTier__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OriginalDiscountTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The discount tier where this price tier is originated from.</description>
        <inlineHelpText>The discount tier where this price tier is originated from.</inlineHelpText>
        <label>Original Discount Tier</label>
        <referenceTo>SBQQ__DiscountTier__c</referenceTo>
        <relationshipLabel>Price Tiers</relationshipLabel>
        <relationshipName>PriceTiers</relationshipName>
        <type>Lookup</type>
    </CustomField>