force-app/main/default/objects/SBQQ__PriceTier__c/fields/SBQQ__PriceModel__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PriceModel__c</fullName>
        <description>The price model that determines how the prices are calculated.</description>
        <inlineHelpText>The price model that determines how the prices are calculated.</inlineHelpText>
        <label>Price Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PriceModel</valueSetName>
        </valueSet>
    </CustomField>