force-app/main/default/objects/SBQQ__PriceTier__c/fields/SBQQ__TermDiscount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TermDiscount__c</fullName>
        <description>The total term discount taken for this tier.</description>
        <inlineHelpText>The total term discount taken for this tier.</inlineHelpText>
        <label>Term Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>